plotmath expressions containing a space.)

A package's DLL used to be built only if standard source files were
seen.  Now src/Makefile.win is run if present, and if that generates
src/$(DLLNAME).dll the DLL is installed.  (DLLNAME is the package name
unless overridden.)

doc/manual/Makefile.win now has targets for fullrefman.{dvi,pdf}.


Bug fixes
---------

The changes to versioned install had ensured that the currently
installed copy of a package had its MD5 sums checked, not the version
waiting to be installed.  Now the correct version is checked.

The Copy, Paste, Copy&Paste and Kill buttons in the MDI mode failed to
restore focus to the console (see rw1070 RGui changes).

The BioConductor people had stolen the menu item for "Install
package(s) from CRAN..." so it was not being enabled/disabled
properly.

The windows() device was not plotting transparent single lines correctly.

The scrollbars on the data editor work better for very large matrices,
and correctly for more than 65535 columns.

The search for a directory for temporary files now checks that TMP and
TEMP point to actual writeable directories.

PKG_FFLAGS is now used if provided.

bringToTop() tested against the wrong limit for the device list and so
would sometimes not work for high-numbered devices if lower-numbered
devices had been closed.



rw1071
======

The system() function printed a spurious warning when the input argument
was used.

The File|Change Dir...|Browse dialog could cause R to crash.

Fixed a bug in versioned install of binary package bundles.

Help for max.col was not being found in CHTML help: we have worked around
a bug in HHW.

The maximum allowed `pointsize' for a windows() device has been
increased to 48: some people have much bigger screens these days.

Rcmd BATCH in rw1070 incorrectly required the R::Utils Perl module.

The data editor no longer takes almost all the CPU cycles when running.

Fixed a bug in the data editor display that sometimes led to R failing
to shutdown.